fix comments + driver is incorrect