@@ -1,7 +1,7 @@
 package steps;
 
-import api.context.ScenarioContext;
-import api.responses.RandomUserResponse;
+import api.dto.Name;
+import api.dto.RandomUserResponse;
 import cucumber.api.java.en.Given;
 import cucumber.api.java.en.Then;
 import cucumber.api.java.en.When;
@@ -10,11 +10,16 @@ import org.testng.Assert;
 import pages.GoogleSearchPage;
 import pages.GoogleSearchResultsPage;
 
-import static api.context.ScenarioContext.Context.USER_NAME;
 import static io.restassured.RestAssured.given;
 import static pages.GoogleSearchPage.BASE_URL;
 
 public class StepsDef {
+    private Name name;
+
+    public StepsDef(Name name) {
+        this.name = name;
+    }
+
     @Given("^I execute API precondition to get random user and save name to Context$")
     public void iExecuteAPIPreconditionToGetRandomUserAndSaveNameToContext() {
 
@@ -25,27 +30,23 @@ public class StepsDef {
                 .then()
                 .extract()
                 .as(RandomUserResponse.class);
-
-        String userName = String.format("%s %s",
-                (userResponse.getResults().get(0).getName().getFirst()),
-                (userResponse.getResults().get(0).getName().getLast()));
-
-        ScenarioContext.setContext(USER_NAME, userName);
+        name.setFirst(userResponse.getResults().get(0).getName().getFirst());
+        name.setLast(userResponse.getResults().get(0).getName().getLast());
     }
 
     @When("^I search for saved to Context user's name and surname in Google$")
     public void iSearchForSavedToContextUserSNameAndSurnameInGoogle() {
-        String searchedName = ScenarioContext.getContext(USER_NAME).toString();
         GoogleSearchPage googleSearchPage = new GoogleSearchPage();
         googleSearchPage.open(BASE_URL);
-        googleSearchPage.enterQueryToSearchBar(searchedName);
+        googleSearchPage.enterQueryToSearchBar(String.format("%s %s", name.getFirst(), name.getLast()));
     }
 
     @Then("^I validate the result with Facebook profile for this person$")
     public void iValidateTheFacebookHasAProfileForThisPerson() {
-        String searchedName = ScenarioContext.getContext(USER_NAME).toString();
         GoogleSearchResultsPage googleSearchResultsPage = new GoogleSearchResultsPage();
-        boolean result = googleSearchResultsPage.isFacebookResultWithUserNameDisplayed(searchedName);
-        Assert.assertTrue(result, String.format("Facebook result with name %s is not displayed", searchedName));
+        boolean result = googleSearchResultsPage.isFacebookResultWithUserNameDisplayed(
+                String.format("%s %s", name.getFirst(), name.getLast()));
+        Assert.assertTrue(result, String.format("Facebook result with name %s is not displayed",
+                String.format("%s %s", name.getFirst(), name.getLast())));
     }
 }
